crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@add_binding.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Add a new binding (input -> output, optional modifier) to a sub-profile

Usage: yokectl add-binding [OPTIONS] <TARGET> <SUB_PROFILE> <INPUT> <OUTPUT>

Arguments:
  <TARGET>       Profile name, file path, or '-' for stdin
  <SUB_PROFILE>  Sub-profile name
  <INPUT>        Input phrase (validated against catalog::inputs)
  <OUTPUT>       Output name (validated against catalog::outputs)

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --modifier <MODIFIER>        Modifier phrase, e.g. "delay_on 250" (default: normal)
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
