crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@apply.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Apply a batch of edit operations atomically

Usage: yokectl apply [OPTIONS] --edits <EDITS> <TARGET>

Arguments:
  <TARGET>  Profile name, file path, or '-' for stdin

Options:
      --edits <EDITS>              Path to a JSON document {"edits": [...]}; '-' reads from stdin
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --dry-run                    Validate without writing
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
