crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@catalog.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Enumerate catalog values (inputs, outputs, preferences, modes, channels)

Usage: yokectl catalog [OPTIONS] <COMMAND>

Commands:
  inputs       List valid input phrases
  outputs      List valid output names
  preferences  List preference keys with their declared value types
  modes        List SubProfileMode values
  channels     List Channel values
  modifiers    List modifier keywords
  help         Print this message or the help of the given subcommand(s)

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
