crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@clear_binding.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Remove a binding from a sub-profile (all rows for an input, or one modifier's row)

Usage: yokectl clear-binding [OPTIONS] <TARGET> <SUB_PROFILE> <INPUT>

Arguments:
  <TARGET>       Profile name, file path, or '-' for stdin
  <SUB_PROFILE>  Sub-profile name
  <INPUT>        Input phrase to clear

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --modifier <MODIFIER>        Only clear the row with this modifier (default: all rows for the input)
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
