crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@completions.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Print a shell-completion script to stdout

Usage: yokectl completions [OPTIONS] <SHELL>

Arguments:
  <SHELL>  Target shell (bash, zsh, fish, powershell, elvish) [possible values: bash, elvish, fish, powershell, zsh]

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
